@@ -17,27 +17,38 @@
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  */
 
+#include "../utils/rts2valuearray.h"
 #include "../utilsdb/rts2devicedb.h"
 #include "../utilsdb/target.h"
 #include "rts2execcli.h"
 #include "rts2execclidb.h"
 #include "rts2devcliphot.h"
 
-#include <vector>
-
 #define OPT_IGNORE_DAY    OPT_LOCAL + 100
 
-class Rts2Executor:public Rts2DeviceDb
+namespace rts2plan
+{
+
+class Executor:public Rts2DeviceDb
 {
 	private:
 		Target * currentTarget;
-		Target *nextTarget;
+		std::list <Target *> nextTargets;
 		Target *priorityTarget;
+
+		void clearNextTargets ();
+
 		void queDarks ();
 		void queFlats ();
 		void beforeChange ();
 		void doSwitch ();
 		void switchTarget ();
+
+		int setNext (int nextId);
+		int queueTarget (int nextId);
+		int setNow (int nextId);
+		int setGrb (int grbId);
+		int setShower ();
 
 								 // -1 means no exposure registered (yet), > 0 means scripts in progress, 0 means all script finished
 		Rts2ValueInteger *scriptCount;
@@ -54,7 +65,7 @@ class Rts2Executor:public Rts2DeviceDb
 
 		int setNow (Target * newTarget);
 
-		void queTarget (Target * in_target);
+		void processTarget (Target * in_target);
 		void updateScriptCount ();
 
 		Rts2ValueInteger *current_id;
@@ -67,14 +78,17 @@ class Rts2Executor:public Rts2DeviceDb
 		Rts2ValueString *next_name;
 		Rts2ValueInteger *priority_id;
 
+		rts2core::IntegerArray *next_ids;
+		rts2core::StringArray *next_names;
+
 		Rts2ValueInteger *img_id;
 
 	protected:
 		virtual int processOption (int in_opt);
 		virtual int reloadConfig ();
 	public:
-		Rts2Executor (int argc, char **argv);
-		virtual ~ Rts2Executor (void);
+		Executor (int argc, char **argv);
+		virtual ~ Executor (void);
 		virtual int init ();
 		virtual Rts2DevClient *createOtherType (Rts2Conn * conn,
 			int other_device_type);
@@ -87,11 +101,6 @@ class Rts2Executor:public Rts2DeviceDb
 
 		virtual int changeMasterState (int new_state);
 
-		int setNext (int nextId);
-		int setNow (int nextId);
-		int setGrb (int grbId);
-		int setShower ();
-
 		int end ()
 		{
 			maskState (EXEC_MASK_END, EXEC_END);
@@ -103,11 +112,15 @@ class Rts2Executor:public Rts2DeviceDb
 		virtual int commandAuthorized (Rts2Conn * conn);
 };
 
-Rts2Executor::Rts2Executor (int in_argc, char **in_argv):
+};
+
+using namespace rts2plan;
+
+
+Executor::Executor (int in_argc, char **in_argv):
 Rts2DeviceDb (in_argc, in_argv, DEVICE_TYPE_EXECUTOR, "EXEC")
 {
 	currentTarget = NULL;
-	nextTarget = NULL;
 	priorityTarget = NULL;
 	createValue (scriptCount, "script_count", "number of running scripts",
 		false);
@@ -135,6 +148,8 @@ Rts2DeviceDb (in_argc, in_argv, DEVICE_TYPE_EXECUTOR, "EXEC")
 
 	createValue (next_id, "next", "ID of next target", false);
 	createValue (next_name, "next_name", "name of next target", false);
+	createValue (next_ids, "next_ids", "IDs of next target(s)", false);
+	createValue (next_names, "next_names", "name of next target(s)", false);
 
 	createValue (priority_id, "priority_target",
 		"ID of priority target (should be NULL in most cases)", false);
@@ -146,16 +161,16 @@ Rts2DeviceDb (in_argc, in_argv, DEVICE_TYPE_EXECUTOR, "EXEC")
 }
 
 
-Rts2Executor::~Rts2Executor (void)
+Executor::~Executor (void)
 {
 	postEvent (new Rts2Event (EVENT_KILL_ALL));
 	delete currentTarget;
-	delete nextTarget;
+	clearNextTargets ();
 }
 
 
 int
-Rts2Executor::processOption (int in_opt)
+Executor::processOption (int in_opt)
 {
 	switch (in_opt)
 	{
@@ -170,7 +185,7 @@ Rts2Executor::processOption (int in_opt)
 
 
 int
-Rts2Executor::reloadConfig ()
+Executor::reloadConfig ()
 {
 	int ret;
 	Rts2Config *config;
@@ -186,7 +201,7 @@ Rts2Executor::reloadConfig ()
 
 
 int
-Rts2Executor::init ()
+Executor::init ()
 {
 	int ret;
 	ret = Rts2DeviceDb::init ();
@@ -199,7 +214,7 @@ Rts2Executor::init ()
 
 
 Rts2DevClient *
-Rts2Executor::createOtherType (Rts2Conn * conn, int other_device_type)
+Executor::createOtherType (Rts2Conn * conn, int other_device_type)
 {
 	switch (other_device_type)
 	{
@@ -223,7 +238,7 @@ Rts2Executor::createOtherType (Rts2Conn * conn, int other_device_type)
 
 
 void
-Rts2Executor::postEvent (Rts2Event * event)
+Executor::postEvent (Rts2Event * event)
 {
 	switch (event->getType ())
 	{
@@ -279,8 +294,8 @@ Rts2Executor::postEvent (Rts2Event * event)
 			updateScriptCount ();
 		#ifdef DEBUG_EXTRA
 			logStream (MESSAGE_DEBUG) <<
-				"EVENT_SCRIPT_ENDED Rts2Executor currentTarget " << currentTarget <<
-				" nextTarget " << nextTarget << sendLog;
+				"EVENT_SCRIPT_ENDED Executor currentTarget " << currentTarget <<
+				" nextTarget " << nextTargets.size () << sendLog;
 		#endif					 /* DEBUG_EXTRA */
 			if (currentTarget)
 			{
@@ -292,9 +307,8 @@ Rts2Executor::postEvent (Rts2Event * event)
 				}
 				// scriptCount is not 0, but we hit continues target..
 				else if (currentTarget->isContinues () == 1
-					&& (nextTarget == NULL
-					|| nextTarget->getTargetID () ==
-					currentTarget->getTargetID ()))
+					&& (nextTargets.size () == 0 || nextTargets.front()->getTargetID () == currentTarget->getTargetID ())
+					)
 				{
 					// wait, if we are in stop..don't que it again..
 					if ((getState () & EXEC_MASK_END) != EXEC_END)
@@ -334,7 +348,7 @@ Rts2Executor::postEvent (Rts2Event * event)
 			{
 				// we are free to start new high-priority observation
 				if (currentTarget)
-					queTarget (currentTarget);
+					processTarget (currentTarget);
 				currentTarget = priorityTarget;
 				priorityTarget = NULL;
 				postEvent (new Rts2Event (EVENT_SET_TARGET, (void *) currentTarget));
@@ -375,7 +389,7 @@ Rts2Executor::postEvent (Rts2Event * event)
 
 
 void
-Rts2Executor::deviceReady (Rts2Conn * conn)
+Executor::deviceReady (Rts2Conn * conn)
 {
 	if (currentTarget)
 		conn->postEvent (new Rts2Event (EVENT_SET_TARGET, (void *) currentTarget));
@@ -383,7 +397,7 @@ Rts2Executor::deviceReady (Rts2Conn * conn)
 
 
 int
-Rts2Executor::info ()
+Executor::info ()
 {
 	updateScriptCount ();
 	if (currentTarget)
@@ -402,15 +416,26 @@ Rts2Executor::info ()
 		current_obsid->setValueInteger (-1);
 		img_id->setValueInteger (-1);
 	}
-	if (nextTarget)
+	std::vector <int> _id_arr;
+	std::vector <std::string> _name_arr;
+	if (nextTargets.size () != 0)
 	{
-		next_id->setValueInteger (nextTarget->getTargetID ());
-		next_name->setValueCharArr (nextTarget->getTargetName ());
+		next_id->setValueInteger (nextTargets.front ()->getTargetID ());
+		next_name->setValueCharArr (nextTargets.front ()->getTargetName ());
+		for (std::list <Target *>::iterator iter = nextTargets.begin (); iter != nextTargets.end (); iter++)
+		{
+			_id_arr.push_back ((*iter)->getTargetID ());
+			_name_arr.push_back ((*iter)->getTargetName ());
+		}
+		next_ids->setValueArray (_id_arr);
+		next_names->setValueArray (_name_arr);
 	}
 	else
 	{
 		next_id->setValueInteger (-1);
 		next_name->setValueCharArr (NULL);
+		next_ids->setValueArray (_id_arr);
+		next_names->setValueArray (_name_arr);
 	}
 	if (priorityTarget)
 	{
@@ -426,7 +451,7 @@ Rts2Executor::info ()
 
 
 int
-Rts2Executor::changeMasterState (int new_state)
+Executor::changeMasterState (int new_state)
 {
 	if (ignoreDay)
 		return Rts2DeviceDb::changeMasterState (new_state);
@@ -442,7 +467,7 @@ Rts2Executor::changeMasterState (int new_state)
 			{
 				maskState (EXEC_MASK_END, EXEC_NOT_END);
 			}
-			if (!currentTarget && nextTarget)
+			if (!currentTarget && nextTargets.size () != 0)
 			{
 				switchTarget ();
 			}
@@ -450,9 +475,9 @@ Rts2Executor::changeMasterState (int new_state)
 		case (SERVERD_DAWN | SERVERD_STANDBY):
 		case (SERVERD_NIGHT | SERVERD_STANDBY):
 		case (SERVERD_DUSK | SERVERD_STANDBY):
-			delete nextTarget;
+			clearNextTargets ();
 			// next will be dark..
-			nextTarget = createTarget (1, observer);
+			nextTargets.push_front (createTarget (1, observer));
 			if (!currentTarget)
 			{
 				switchTarget ();
@@ -469,21 +494,28 @@ Rts2Executor::changeMasterState (int new_state)
 
 
 int
-Rts2Executor::setNext (int nextId)
+Executor::setNext (int nextId)
 {
-	if (nextTarget)
+	if (nextTargets.size() != 0)
 	{
-		if (nextTarget->getTargetID () == nextId)
+		if (nextTargets.front ()->getTargetID () == nextId)
 			// we observe the same target..
 			return 0;
-		delete nextTarget;
+		clearNextTargets ();
 	}
-	nextTarget = createTarget (nextId, observer);
-	if (!nextTarget)
+	return queueTarget (nextId);
+}
+
+
+int
+Executor::queueTarget (int tarId)
+{
+	Target *nt = createTarget (tarId, observer);
+	if (!nt)
 	{
-		// error
 		return -2;
 	}
+	nextTargets.push_back (nt);
 	if (!currentTarget)
 		switchTarget ();
 	else
@@ -493,7 +525,7 @@ Rts2Executor::setNext (int nextId)
 
 
 int
-Rts2Executor::setNow (int nextId)
+Executor::setNow (int nextId)
 {
 	Target *newTarget;
 
@@ -512,12 +544,12 @@ Rts2Executor::setNow (int nextId)
 
 
 int
-Rts2Executor::setNow (Target * newTarget)
+Executor::setNow (Target * newTarget)
 {
 	if (currentTarget)
 	{
 		currentTarget->endObservation (-1);
-		queTarget (currentTarget);
+		processTarget (currentTarget);
 	}
 	currentTarget = NULL;
 
@@ -528,11 +560,7 @@ Rts2Executor::setNow (Target * newTarget)
 
 	// at this situation, we would like to get rid of nextTarget as
 	// well
-	if (nextTarget)
-	{
-		delete nextTarget;
-		nextTarget = NULL;
-	}
+	clearNextTargets ();
 
 	clearAll ();
 	postEvent (new Rts2Event (EVENT_KILL_ALL));
@@ -544,7 +572,7 @@ Rts2Executor::setNow (Target * newTarget)
 
 
 int
-Rts2Executor::setGrb (int grbId)
+Executor::setGrb (int grbId)
 {
 	Target *grbTarget;
 	struct ln_hrz_posn grbHrz;
@@ -555,7 +583,7 @@ Rts2Executor::setGrb (int grbId)
 		|| getMasterState () == SERVERD_DUSK
 		|| getMasterState () == SERVERD_DAWN))
 	{
-		logStream (MESSAGE_DEBUG) << "Rts2Executor::setGrb daylight GRB ignored"
+		logStream (MESSAGE_DEBUG) << "Executor::setGrb daylight GRB ignored"
 			<< sendLog;
 		return -2;
 	}
@@ -571,7 +599,7 @@ Rts2Executor::setGrb (int grbId)
 	// miss GRB:(
 	if (!ret)
 	{
-		logStream (MESSAGE_DEBUG) << "Rts2Executor::setGrb grbHrz alt:" <<
+		logStream (MESSAGE_DEBUG) << "Executor::setGrb grbHrz alt:" <<
 			grbHrz.alt << sendLog;
 		if (grbHrz.alt < 0)
 		{
@@ -605,8 +633,8 @@ Rts2Executor::setGrb (int grbId)
 				return 0;
 			}
 		}
-		delete nextTarget;
-		nextTarget = grbTarget;
+		clearNextTargets ();
+		nextTargets.push_back (grbTarget);
 		switchTarget ();
 		return 0;
 	}
@@ -623,20 +651,20 @@ Rts2Executor::setGrb (int grbId)
 		return 0;
 	}
 	// otherwise set us as next target
-	delete nextTarget;
-	nextTarget = grbTarget;
+	clearNextTargets ();
+	nextTargets.push_back (grbTarget);
 	return 0;
 }
 
 
 int
-Rts2Executor::setShower ()
+Executor::setShower ()
 {
 	// is during night and ready?
 	if (!(getMasterState () == SERVERD_NIGHT))
 	{
 		logStream (MESSAGE_DEBUG) <<
-			"Rts2Executor::setShow daylight shower ignored" << sendLog;
+			"Executor::setShower daylight shower ignored" << sendLog;
 		return -2;
 	}
 
@@ -645,7 +673,7 @@ Rts2Executor::setShower ()
 
 
 int
-Rts2Executor::stop ()
+Executor::stop ()
 {
 	postEvent (new Rts2Event (EVENT_STOP_OBSERVATION));
 	updateScriptCount ();
@@ -656,7 +684,18 @@ Rts2Executor::stop ()
 
 
 void
-Rts2Executor::queDarks ()
+Executor::clearNextTargets ()
+{
+	for (std::list <Target *>::iterator iter = nextTargets.begin (); iter != nextTargets.end (); iter++)
+	{
+		delete *iter;
+	}
+	nextTargets.clear ();
+}
+
+
+void
+Executor::queDarks ()
 {
 	Rts2Conn *minConn = getMinConn ("que_size");
 	if (!minConn)
@@ -666,7 +705,7 @@ Rts2Executor::queDarks ()
 
 
 void
-Rts2Executor::queFlats ()
+Executor::queFlats ()
 {
 	Rts2Conn *minConn = getMinConn ("que_size");
 	if (!minConn)
@@ -676,7 +715,7 @@ Rts2Executor::queFlats ()
 
 
 void
-Rts2Executor::beforeChange ()
+Executor::beforeChange ()
 {
 	// both currentTarget and nextTarget are defined
 	char currType;
@@ -685,8 +724,8 @@ Rts2Executor::beforeChange ()
 		currType = currentTarget->getTargetType ();
 	else
 		currType = TYPE_UNKNOW;
-	if (nextTarget)
-		nextType = nextTarget->getTargetType ();
+	if (nextTargets.size () != 0)
+		nextType = nextTargets.front ()->getTargetType ();
 	else
 		nextType = currType;
 	if (currType == TYPE_DARK && nextType != TYPE_DARK)
@@ -697,41 +736,41 @@ Rts2Executor::beforeChange ()
 
 
 void
-Rts2Executor::doSwitch ()
+Executor::doSwitch ()
 {
 	int ret;
 	int nextId;
 	// we need to change current target - usefull for planner runs
 	if (currentTarget && currentTarget->isContinues () == 2
-		&& (!nextTarget	|| nextTarget->getTargetID () == currentTarget->getTargetID ()))
+		&& (nextTargets.size () == 0 || nextTargets.front ()->getTargetID () == currentTarget->getTargetID ()))
 	{
-		delete nextTarget;
+		nextTargets.pop_front ();
 		// create again our target..since conditions changed, we will get different target id
-		nextTarget = createTarget (currentTarget->getTargetID (), observer);
+		nextTargets.push_front (createTarget (currentTarget->getTargetID (), observer));
 	}
 	// check dark and flat processing
 	beforeChange ();
-	if (nextTarget)
+	if (nextTargets.size () != 0)
 	{
 		// go to post-process
 		if (currentTarget)
 		{
 			// next target is defined - tested on line -5
-			nextId = nextTarget->getTargetID ();
+			nextId = (*nextTargets.begin ())->getTargetID ();
 			ret = currentTarget->endObservation (nextId);
 			if (!(ret == 1 && nextId == currentTarget->getTargetID ()))
 				// don't que only in case nextTarget and currentTarget are
 				// same and endObservation returns 1
 			{
-				queTarget (currentTarget);
-				currentTarget = nextTarget;
-				nextTarget = NULL;
+				processTarget (currentTarget);
+				currentTarget = nextTargets.front ();
+				nextTargets.pop_front ();
 			}
 		}
 		else
 		{
-			currentTarget = nextTarget;
-			nextTarget = NULL;
+			currentTarget = nextTargets.front ();
+			nextTargets.pop_front ();
 		}
 	}
 	if (currentTarget)
@@ -745,7 +784,7 @@ Rts2Executor::doSwitch ()
 
 
 void
-Rts2Executor::switchTarget ()
+Executor::switchTarget ()
 {
 	if ((getState () & EXEC_MASK_END) == EXEC_END)
 	{
@@ -754,14 +793,10 @@ Rts2Executor::switchTarget ()
 		if (currentTarget)
 		{
 			currentTarget->endObservation (-1);
-			queTarget (currentTarget);
+			processTarget (currentTarget);
 		}
 		currentTarget = NULL;
-		if (nextTarget)
-		{
-			delete nextTarget;
-			nextTarget = NULL;
-		}
+		clearNextTargets ();
 	}
 	else if (ignoreDay)
 	{
@@ -780,7 +815,7 @@ Rts2Executor::switchTarget ()
 				break;
 			case SERVERD_DUSK | SERVERD_STANDBY:
 			case SERVERD_DAWN | SERVERD_STANDBY:
-				if (!currentTarget && nextTarget && nextTarget->getTargetID () == 1)
+				if (!currentTarget && nextTargets.size () != 0 && nextTargets.front ()->getTargetID () == 1)
 				{
 					// switch to dark..
 					doSwitch ();
@@ -790,14 +825,10 @@ Rts2Executor::switchTarget ()
 				if (currentTarget)
 				{
 					currentTarget->endObservation (-1);
-					queTarget (currentTarget);
+					processTarget (currentTarget);
 				}
 				currentTarget = NULL;
-				if (nextTarget)
-				{
-					delete nextTarget;
-					nextTarget = NULL;
-				}
+				clearNextTargets ();
 		}
 	}
 	infoAll ();
@@ -805,7 +836,7 @@ Rts2Executor::switchTarget ()
 
 
 void
-Rts2Executor::queTarget (Target * in_target)
+Executor::processTarget (Target * in_target)
 {
 	int ret;
 	// test for final acq..
@@ -827,7 +858,7 @@ Rts2Executor::queTarget (Target * in_target)
 
 
 void
-Rts2Executor::updateScriptCount ()
+Executor::updateScriptCount ()
 {
 	int scriptRunning = 0;
 	postEvent (new Rts2Event (EVENT_SCRIPT_RUNNING_QUESTION, (void *) &scriptRunning));
@@ -836,7 +867,7 @@ Rts2Executor::updateScriptCount ()
 
 
 int
-Rts2Executor::commandAuthorized (Rts2Conn * conn)
+Executor::commandAuthorized (Rts2Conn * conn)
 {
 	int tar_id;
 	if (conn->isCommand ("grb"))
@@ -859,6 +890,12 @@ Rts2Executor::commandAuthorized (Rts2Conn * conn)
 			return -2;
 		return setNow (tar_id);
 	}
+	else if (conn->isCommand ("queue"))
+	{
+		if (conn->paramNextInteger (&tar_id) || !conn->paramEnd ())
+			return -2;
+		return queueTarget (tar_id);
+	}
 	else if (conn->isCommand ("next"))
 	{
 		if (conn->paramNextInteger (&tar_id) || !conn->paramEnd ())
@@ -877,6 +914,13 @@ Rts2Executor::commandAuthorized (Rts2Conn * conn)
 			return -2;
 		return stop ();
 	}
+	else if (conn->isCommand ("clear"))
+	{
+		if (!conn->paramEnd ())
+		  	return -2;
+		clearNextTargets ();
+		return 0;
+	}
 	return Rts2DeviceDb::commandAuthorized (conn);
 }
 
@@ -884,6 +928,6 @@ Rts2Executor::commandAuthorized (Rts2Conn * conn)
 int
 main (int argc, char **argv)
 {
-	Rts2Executor executor = Rts2Executor (argc, argv);
+	Executor executor = Executor (argc, argv);
 	return executor.run ();
 }
